Changed default compression to zstd

--- a/action.yaml
+++ b/action.yaml
@@ -66,3 +66,4 @@ runs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        outputs: type=image,compression=zstd,push=true
